[package]
name = "archie"
version = "1.0.2"
edition = "2021"
authors = ["Enrico Saggiorato <saggiorato.enrico@gmail.com"]
description = "Create folder structures"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Essay97/archie"
repository = "https://github.com/Essay97/archie"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
directories = "5.0.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_yaml = "0.9.21"
